<resources>
    <string name="app_name" translatable="false">Socialize</string>

    /* ----- GENERAL string ----- */

    <string name="general_next">Next</string>
    <string name="general_done">Done</string>
    <string name="general_send">Send</string>
    <string name="LoremIpsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="general_error">Error</string>
    <string name="general_ok">OK</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_delete">Delete</string>
    <string name="general_warning_uppercase">WARNING</string>
    <string name="general_showlocation">Show my location to other users</string>

    /* ----- Database string ----- */

    <string name="database_could_not_find_you_in_db">Could not find you in the database !</string>
    <string name="database_could_not_find_this_user_in_db">Could not find this user in the database !</string>
    <string name="database_could_not_establish_relation">Could not establish relation !</string>

    /* ----- SignIn string ----- */

    <string name="signin_welcomemessage">Welcome in Socialize!</string>
    <string name="signin_channel_name" translatable="false">Notification Channel</string>
    <string name="signin_channel_description" translatable="false">Notification Channel for Socialize</string>


    /* ----- Toolbar string ----- */

    <string name="toolbar_my_posts">My posts</string>
    <string name="toolbar_profile">Profile</string>
    <string name="toolbar_nearby">Nearby</string>
    <string name="toolbar_chats">Chats</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_services">Services</string>
    <string name="toolbar_TodoList" translatable="false">TODO</string>

    /* ----- Navigation string ----- */

    <string name="title_activity_main">Socialize!</string>
    <string name="title_activity_online_chat">OnlineChatActivity</string>
    <string name="title_activity_chat_room">ChatRoom</string>
    <string name="title_activity_services_search">ServicesSearch</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_header_title">Unknown</string>
    <string name="navigation_header_subtitle">unknown@gmail.com</string>
    <string name="navigation_header_desc">Navigation header</string>

    <string name="navigation_drawer_button_nearby">Nearby</string>
    <string name="navigation_drawer_button_profile">Profile</string>
    <string name="navigation_drawer_button_services">Services</string>
    <string name="navigation_drawer_newpost">New post</string>
    <string name="navigation_drawer_myposts">My posts</string>
    <string name="navigation_drawer_button_TODO_list">TODO</string>
    <string name="navigation_drawer_button_chats">Chats</string>
    <string name="navigation_drawer_section_settings">Settings</string>
    <string name="navigation_drawer_button_logout">Logout</string>

    /* ----- Home string ----- */

    <string name="homefragment_asktorefresh">Refresh for the latest posts!</string>
    <string name="homefragment_noposts">No posts for now …</string>
    <string name="homefragment_hintrefreshbutton">Refresh</string>
    <string name="homefragment_postdistance">%1.0fkm away</string>

    /* ----- Profile string ----- */

    <string name="newprofile_title">Profile setup</string>
    <string name="newprofile_name">Name:</string>
    <string name="newprofile_description">Description:</string>
    <string name="newprofile_descriptionhint">Write a short description of yourself…</string>
    <string name="newprofile_picture">Picture:</string>
    <string name="newprofile_changepicture">Change</string>

    <string name="profiledisplay_emailtag">EMail</string>
    <string name="profiledisplay_surnametag">Surname</string>
    <string name="profiledisplay_nametag">Name</string>
    <string name="profiledisplay_ratingtag">Rating</string>
    <string name="profilesettings_save">Save</string>
    <string name="profiledisplay_descriptiontag">Description</string>
    <string name="profiledisplay_modify">Modify</string>
    <string name="profiledisplay_categoriestag">My capabilities</string>

    <string name="show_profile">See the profile</string>


    /* ----- Service string ----- */

    <string name="servicesfragment_title">Users that can help you</string>
    <string name="servicesfragment_hintkeywords">Enter some keywords separated by a space</string>
    <string name="servicesfragment_search">Search</string>
    <string name="servicesfragment_problem">Oops! Look like no one can help you!\nSelect another category, or check your internet connection.</string>


    /* ----- Post string ----- */

    <string name="post_hinteditbutton">Edit your post</string>

    <string name="postadapter_hintdeletebutton">Delete your post</string>

    <string name="createpostfragment_entertitle">Enter a title here</string>
    <string name="createpostfragment_enterbody">Enter the body here</string>
    <string name="createpostfragment_titleempty">You need to enter a title!</string>
    <string name="createpostfragment_bodyempty">You need to enter a body!</string>
    <string name="createpostfragment_switch_button_location">Location of the Post   </string>
    <string name="createpostfragment_location_switch_on">Home location</string>
    <string name="createpostfragment_location_switch_off">Current location</string>

    /* ----- Category strings ----- */

    <string name="category_IC">Computer</string>
    <string name="category_Maths">Maths</string>
    <string name="category_House">House</string>
    <string name="category_Cooking">Cooking</string>
    <string name="category_Teaching">Teaching</string>
    <string name="category_Gardening">Gardening</string>
    <string name="category_Mechanics">Mechanics</string>
    <string name="category_Dailylife">Daily Life</string>
    <string name="category_Transportation">Transportation</string>

    /* ----- Chat string ----- */

    <string name="chat_room_message_hint">Write your message here</string>
    <string name="chat_delete_alert_title">Are you sure?</string>
    <string name="chat_delete_alert_text">Do you want to delete this message?</string>
    <string name="chat_message_not_found">Chat message not found.</string>
    <string name="chat_relation_delete_alert_title">Delete conversation with </string>
    <string name="chat_relation_delete_alert_text">Do you want to delete this conversation?</string>
    <string name="chat_online_search_hint">Type a name to find a chat!</string>
    <string name="chat_deleted_chat">This chat has been deleted.</string>

    /* ----- Settings string ----- */

    <string name="settings_unavailable_location">Location unavailable</string>
    <string name="settings_title_localisation">Location</string>
    <string name="settings_title_screen">Screen</string>

    <string name="settings_subtitle_current_localisation">Current home position</string>
    <string name="settings_button_set_home">Set your home to your current position</string>

    <string name="settings_switch_darkmode">Dark mode</string>

    <string name="settings_seekbar_radius">Visibility radius of other users\' posts</string>
    <string name="settings_seekbar_currentradius">Current radius : </string>
    <string name="settings_seekbar_toast_end">Radius changed to : </string>

    <string name="settings_invite_friend_button">Invite a friend</string>
    <string name="settings_invite_friend_subject">Your friend invite you to join Socialize !</string>
    <string name="settings_invite_friend_body">Come to Socialize</string>
    <string name="settings_invite_friend_client_chooser">Choose a client : </string>

    <string name="settings_deletemyaccount">Delete my account</string>
    <string name="settings_deleteaccount_warningmessage">You are about to permanently delete your account !
        \nThis will have these consequences :
        \n1. You will not be able to recover your data.
        \n2. All conversations you have will be lost.
        \n3. If you want to come back, you will have to configure everything once again.</string>
    <string name="settings_continue_confirmation_deleteaccount" translatable="false">CONTINUE</string>

    /* ----- Map string ----- */

    <string name="map_info_unknownuser">Unknown</string>

    /* ----- User string ----- */

    <string name="user_search_distanceunavailable">Unavailable</string>
    <string name="user_search_distancedisplay">%1dkm away</string>

    /* ----- Capability string ----- */

    <string name="capability_layout_hintkeywords">Type some keywords separated by ;</string>


    <string-array name="language_arrays">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string name="settings_deleteaccount_fail">Check spelling if you want to delete your account</string>
    <string name="servicesfragment_proximityranking">Ranking:</string>
    <string name="servicesfragment_rating">Rating</string>
    <string name="servicesfragment_category">Category:</string>
    <string name="createpost_timeout_oneday">1 day</string>
    <string name="createpost_timeout_oneweek">1 week</string>
    <string name="createpost_postlifetime">Post lifetime</string>
    <string name="createpost_timeout_threedays">3 days</string>
    <string name="createpost_timeout_twoweeks">2 weeks</string>
    <string name="servicesfragment_proximity">Proximity</string>

</resources>
