<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_online_chat_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".view.fragments.OnlineChatFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_online_chats_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.v7.widget.RecyclerView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/online_chat_fragment_search_bar"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/chat_online_search_hint" />

        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>